--- a/sommaire.html
+++ b/sommaire.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <h1>Sommaire :</h1>
-    <a href="page2.html" target="f2">Page 2</a> <br>
+    <a href="contenu.html" target="f2">Page 1</a><br>
+    <a href="page2.html" target="f2">Page 2</a><br>
     <a href="page3.html" target="f2">Page 3</a><br>
 </body>
+
 </html>
