Mise à jour du contenu des pages pour refléter les métiers d'avenir en informatique (BTS SIO 2026-2030) et amélioration de la structure du sommaire.

--- a/contenu.html
+++ b/contenu.html
@@ -3,33 +3,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Métiers SISR - Solutions d'Infrastructure</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <main>
-        <h1>Bienvenue au Lycée Parc de Vilgénis</h1>
+        <h1>🖥️ Métiers d'Avenir SISR</h1>
+        <h2>Solutions d'Infrastructure, Systèmes et Réseaux</h2>
+        
         <section>
-            <h2>Présentation de l'établissement</h2>
+            <h2>🛡️ Spécialiste en Cybersécurité</h2>
             <p>
-                Le Lycée Parc de Vilgénis, situé à Massy, propose un environnement moderne et verdoyant, idéal pour la réussite scolaire. Il accueille des élèves dans différentes filières, du secondaire au supérieur, et se distingue par la qualité de ses enseignements et de ses infrastructures.
-            </p>
-        </section>
-        <section>
-            <h2>Les BTS SIO</h2>
-            <p>
-                Le BTS Services Informatiques aux Organisations (SIO) forme des spécialistes de l'informatique capables d'intervenir sur des projets variés : développement d'applications, gestion de réseaux, sécurité, support technique, etc. Deux options sont proposées :
+                <strong>Évolution majeure 2026-2030 :</strong> Avec l'explosion des cyberattaques et la généralisation du télétravail, 
+                ce métier devient critique. Les spécialistes protègent les infrastructures contre les menaces numériques.
             </p>
             <ul>
-                <li><strong>SISR</strong> (Solutions d’Infrastructure, Systèmes et Réseaux) : pour ceux qui souhaitent se spécialiser dans l’administration des réseaux et systèmes informatiques.</li>
-                <li><strong>SLAM</strong> (Solutions Logicielles et Applications Métiers) : pour ceux qui préfèrent le développement d’applications et de solutions logicielles.</li>
+                <li>Analyse des vulnérabilités et tests de pénétration</li>
+                <li>Mise en place de solutions de sécurité avancées</li>
+                <li>Gestion des incidents de sécurité (SOC)</li>
+                <li>Sensibilisation et formation des utilisateurs</li>
             </ul>
+            <p><em>Salaire moyen attendu 2026 : 45 000 - 70 000€</em></p>
         </section>
+
         <section>
-            <h2>À propos de ce site</h2>
+            <h2>☁️ Architecte Cloud Infrastructure</h2>
             <p>
-                Ce site web est un petit TD d’introduction à l’hébergement et à la structuration de pages web. Il permet de découvrir les bases de l’organisation d’un site, l’utilisation du HTML et du CSS, ainsi que la navigation entre différentes pages.
+                <strong>Métier en pleine expansion :</strong> La migration vers le cloud s'accélère. Les entreprises recherchent 
+                des experts capables de concevoir et gérer des infrastructures cloud hybrides et multi-cloud.
             </p>
+            <ul>
+                <li>Conception d'architectures AWS, Azure, Google Cloud</li>
+                <li>Automatisation et orchestration (Terraform, Kubernetes)</li>
+                <li>Optimisation des coûts cloud</li>
+                <li>Migration et modernisation d'applications</li>
+            </ul>
+            <p><em>Salaire moyen attendu 2026 : 50 000 - 80 000€</em></p>
+        </section>
+
+        <section>
+            <h2>🤖 DevOps Engineer</h2>
+            <p>
+                <strong>Profil très recherché :</strong> L'automatisation devient incontournable. Les DevOps facilitent 
+                la collaboration entre développement et production pour des déploiements plus rapides et fiables.
+            </p>
+            <ul>
+                <li>CI/CD (Intégration et Déploiement Continus)</li>
+                <li>Containerisation (Docker, Kubernetes)</li>
+                <li>Monitoring et observabilité</li>
+                <li>Infrastructure as Code (IaC)</li>
+            </ul>
+            <p><em>Salaire moyen attendu 2026 : 48 000 - 75 000€</em></p>
+        </section>
+
+        <section>
+            <h2>📊 Administrateur de Données</h2>
+            <p>
+                <strong>Enjeu majeur :</strong> Avec le RGPD et l'explosion des données, les entreprises ont besoin 
+                d'experts pour gérer, sécuriser et optimiser leurs bases de données.
+            </p>
+            <ul>
+                <li>Administration de bases de données (SQL, NoSQL)</li>
+                <li>Sauvegarde et plan de reprise d'activité</li>
+                <li>Optimisation des performances</li>
+                <li>Conformité RGPD et sécurité des données</li>
+            </ul>
+            <p><em>Salaire moyen attendu 2026 : 42 000 - 65 000€</em></p>
         </section>
     </main>
 </body>
