--- a/index.html
+++ b/index.html
@@ -3,14 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Métiers d'Avenir BTS SIO 2026-2030</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <main>
-        <h1>Lycée Parc de Vilgénis</h1>
+        <h1>Métiers d'Avenir du BTS SIO</h1>
+        <h2>Horizons 2026-2030</h2>
         <p>
-            Situé à Massy, le <strong>Lycée Parc de Vilgénis</strong> est un établissement reconnu pour la qualité de ses formations générales, technologiques et professionnelles. Le lycée bénéficie d'un cadre verdoyant, propice à l'apprentissage et à l'épanouissement des élèves. Il propose de nombreux projets, des équipements modernes et une vie scolaire dynamique.
+            Découvrez les <strong>métiers d'avenir</strong> du secteur informatique liés au BTS Services Informatiques aux Organisations. 
+            Entre innovation technologique et transformation numérique, explorez les opportunités professionnelles qui façonneront 
+            le monde du travail de demain dans les domaines des infrastructures IT et du développement logiciel.
+        </p>
+        <p>
+            🚀 <em>Préparez-vous aux défis technologiques de demain !</em>
         </p>
     </main>
     <iframe src="sommaire.html" name="f1" height="800" width="20%"></iframe>
