--- a/sommaire.html
+++ b/sommaire.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sommaire - Métiers d'Avenir BTS SIO</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Sommaire :</h1>
-    <a href="contenu.html" target="f2">Page 1</a><br>
-    <a href="page2.html" target="f2">Page 2</a><br>
-    <a href="page3.html" target="f2">Page 3</a><br>
+    <a href="contenu.html" target="f2">🖥️ Métiers SISR</a><br>
+    <a href="page2.html" target="f2">💻 Métiers SLAM</a><br>
+    <a href="page3.html" target="f2">🚀 Perspectives 2026-2030</a><br>
 </body>
 
 </html>
