Ajout d'un lien vers la présentation globale dans le sommaire

--- a/sommaire.html
+++ b/sommaire.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Métiers d'Avenir BTS SIO :</h1>
+    <a href="contenu.html" target="f2">Presentation globale</a><br>
     <a href="cybersecurite.html" target="f2">Spécialiste Cybersécurité</a><br>
     <a href="devops.html" target="f2">DevOps Engineer</a><br>
     <a href="cloud.html" target="f2">Architecte Cloud</a><br>
