Suppression des emojis dans les titres et les sections des pages métiers pour une présentation plus professionnelle.

--- a/datascience.html
+++ b/datascience.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <main>
-        <h1>📊 Data Scientist</h1>
+        <h1>Data Scientist</h1>
         <h2>Transformer les données en décisions stratégiques</h2>
         
         <section>
@@ -22,7 +22,7 @@
                 combine informatique, statistiques et expertise métier.
             </p>
             <p>
-                <em>🚀 +35% de croissance d'emploi prévue 2025-2030</em>
+                <em>+35% de croissance d'emploi prévue 2025-2030</em>
             </p>
         </section>
 
@@ -42,7 +42,7 @@
             <h2>Stack technologique 2026</h2>
             <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px;">
                 <div>
-                    <h3>🐍 Langages</h3>
+                    <h3>Langages</h3>
                     <ul>
                         <li><strong>Python</strong> : Pandas, NumPy, Scikit-learn</li>
                         <li><strong>SQL</strong> : PostgreSQL, MySQL, BigQuery</li>
@@ -51,7 +51,7 @@
                     </ul>
                 </div>
                 <div>
-                    <h3>🤖 Outils IA/ML</h3>
+                    <h3>Outils IA/ML</h3>
                     <ul>
                         <li>TensorFlow, PyTorch</li>
                         <li>Jupyter Notebooks</li>
@@ -71,22 +71,22 @@
                     <th>Salaire moyen 2026</th>
                 </tr>
                 <tr>
-                    <td>🏦 Banque/Finance</td>
+                    <td>Banque/Finance</td>
                     <td>Détection fraude, trading algo</td>
                     <td>60 000 - 90 000€</td>
                 </tr>
                 <tr>
-                    <td>🛒 E-commerce</td>
+                    <td>E-commerce</td>
                     <td>Recommandations, prix dynamiques</td>
                     <td>55 000 - 80 000€</td>
                 </tr>
                 <tr>
-                    <td>🏥 Santé</td>
+                    <td>Santé</td>
                     <td>Diagnostic IA, médicaments</td>
                     <td>50 000 - 85 000€</td>
                 </tr>
                 <tr>
-                    <td>🚗 Automobile</td>
+                    <td>Automobile</td>
                     <td>Voitures autonomes, maintenance</td>
                     <td>58 000 - 95 000€</td>
                 </tr>
@@ -94,7 +94,7 @@
         </section>
 
         <section>
-            <h2>💡 Lien avec le BTS SIO</h2>
+            <h2>Lien avec le BTS SIO</h2>
             <p>
                 <strong>Option SLAM recommandée</strong> avec spécialisation data :
             </p>
@@ -108,10 +108,10 @@
         </section>
 
         <section>
-            <h2>🎯 Évolutions de carrière</h2>
+            <h2>Évolutions de carrière</h2>
             <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px;">
                 <div>
-                    <h3>📈 Progressions techniques</h3>
+                    <h3>Progressions techniques</h3>
                     <ul>
                         <li>Data Analyst → Data Scientist</li>
                         <li>Data Scientist → Senior DS</li>
@@ -120,7 +120,7 @@
                     </ul>
                 </div>
                 <div>
-                    <h3>👔 Vers le management</h3>
+                    <h3>Vers le management</h3>
                     <ul>
                         <li>Data Scientist → Lead Data</li>
                         <li>Lead Data → Data Manager</li>
@@ -132,7 +132,7 @@
         </section>
 
         <section>
-            <h2>🎓 Conseil pour débuter</h2>
+            <h2>Conseil pour débuter</h2>
             <p>
                 <strong>Projet personnel conseillé</strong> : Analyser un dataset public (Kaggle) avec Python, 
                 créer des visualisations et publier sur GitHub. Cela impressionne les recruteurs !
