--- a/devops.html
+++ b/devops.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <main>
-        <h1>🤖 DevOps Engineer</h1>
+        <h1>DevOps Engineer</h1>
         <h2>Le pont entre développement et production</h2>
         
         <section>
@@ -19,7 +19,7 @@
                 des pannes selon les études du secteur.
             </p>
             <p>
-                <em>🚀 Métier le plus recherché en IT selon Stack Overflow 2024-2025</em>
+                <em>Métier le plus recherché en IT selon Stack Overflow 2024-2025</em>
             </p>
         </section>
 
@@ -38,7 +38,7 @@
             <h2>Stack technique 2026</h2>
             <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px;">
                 <div>
-                    <h3>🛠️ Outils principaux</h3>
+                    <h3>Outils principaux</h3>
                     <ul>
                         <li>Git, GitHub Actions</li>
                         <li>Docker, Kubernetes</li>
@@ -48,7 +48,7 @@
                     </ul>
                 </div>
                 <div>
-                    <h3>☁️ Plateformes Cloud</h3>
+                    <h3>Plateformes Cloud</h3>
                     <ul>
                         <li>AWS (EC2, EKS, Lambda)</li>
                         <li>Azure (AKS, DevOps)</li>
@@ -74,7 +74,7 @@
         </section>
 
         <section>
-            <h2>💰 Rémunération attractive</h2>
+            <h2>Rémunération attractive</h2>
             <table>
                 <tr>
                     <th>Expérience</th>
@@ -100,15 +100,15 @@
         </section>
 
         <section>
-            <h2>🎯 Évolutions de carrière</h2>
+            <h2>Évolutions de carrière</h2>
             <p>
                 <strong>Progressions possibles :</strong>
             </p>
             <ul>
-                <li>🔄 DevOps Engineer → Senior DevOps → Platform Engineer</li>
-                <li>📊 DevOps → SRE (Site Reliability Engineer)</li>
-                <li>🏗️ DevOps → Cloud Architect</li>
-                <li>👥 DevOps → Team Lead → CTO</li>
+                <li>DevOps Engineer → Senior DevOps → Platform Engineer</li>
+                <li>DevOps → SRE (Site Reliability Engineer)</li>
+                <li>DevOps → Cloud Architect</li>
+                <li>DevOps → Team Lead → CTO</li>
             </ul>
         </section>
     </main>
