--- a/devweb.html
+++ b/devweb.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <main>
-        <h1>💻 Développeur Full-Stack</h1>
+        <h1>Développeur Full-Stack</h1>
         <h2>Maîtriser toute la chaîne de développement</h2>
         
         <section>
@@ -22,7 +22,7 @@
                 et des opportunités dans tous les secteurs.
             </p>
             <p>
-                <em>🔥 +28% de croissance prévue 2025-2030</em>
+                <em>+28% de croissance prévue 2025-2030</em>
             </p>
         </section>
 
@@ -42,7 +42,7 @@
             <h2>Stack technologique 2026-2030</h2>
             <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px;">
                 <div>
-                    <h3>🎨 Frontend (côté client)</h3>
+                    <h3>Frontend (côté client)</h3>
                     <ul>
                         <li><strong>JavaScript/TypeScript</strong> : Base indispensable</li>
                         <li><strong>React/Vue.js/Angular</strong> : Frameworks modernes</li>
@@ -52,7 +52,7 @@
                     </ul>
                 </div>
                 <div>
-                    <h3>⚙️ Backend (côté serveur)</h3>
+                    <h3>Backend (côté serveur)</h3>
                     <ul>
                         <li><strong>Node.js</strong> : JavaScript côté serveur</li>
                         <li><strong>Python</strong> : Django, FastAPI</li>
@@ -73,24 +73,24 @@
                     <th>Demande marché</th>
                 </tr>
                 <tr>
-                    <td>🤖 IA Générative</td>
+                    <td>IA Générative</td>
                     <td>Copilot, ChatGPT intégration</td>
-                    <td>🔥 Explosive</td>
+                    <td>Explosive</td>
                 </tr>
                 <tr>
-                    <td>🌐 WebAssembly</td>
+                    <td>WebAssembly</td>
                     <td>Performance applications web</td>
-                    <td>📈 Croissance forte</td>
+                    <td>Croissance forte</td>
                 </tr>
                 <tr>
-                    <td>🎮 WebGL/WebXR</td>
+                    <td>WebGL/WebXR</td>
                     <td>3D, VR, AR dans le navigateur</td>
-                    <td>🚀 Émergente</td>
+                    <td>Émergente</td>
                 </tr>
                 <tr>
-                    <td>⚡ Edge Computing</td>
+                    <td>Edge Computing</td>
                     <td>APIs ultra-rapides</td>
-                    <td>📊 Stable</td>
+                    <td>Stable</td>
                 </tr>
             </table>
         </section>
