--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             le monde du travail de demain dans les domaines des infrastructures IT et du développement logiciel.
         </p>
         <p>
-            🚀 <em>Préparez-vous aux défis technologiques de demain !</em>
+            <em>Préparez-vous aux défis technologiques de demain !</em>
         </p>
     </main>
     <iframe src="sommaire.html" name="f1" height="800" width="30%"></iframe>
