--- a/cloud.html
+++ b/cloud.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <main>
-        <h1>☁️ Architecte Cloud</h1>
+        <h1>Architecte Cloud</h1>
         <h2>Concevoir l'infrastructure de demain</h2>
         
         <section>
@@ -22,7 +22,7 @@
                 scalables, sécurisées et optimisées pour l'avenir.
             </p>
             <p>
-                <em>📊 +40% d'offres d'emploi prévues 2025-2028</em>
+                <em>+40% d'offres d'emploi prévues 2025-2028</em>
             </p>
         </section>
 
@@ -41,7 +41,7 @@
             <h2>Technologies maîtrisées 2026-2030</h2>
             <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px;">
                 <div>
-                    <h3>🌐 Plateformes Cloud</h3>
+                    <h3>Plateformes Cloud</h3>
                     <ul>
                         <li><strong>AWS</strong> : Leader mondial (32% du marché)</li>
                         <li><strong>Microsoft Azure</strong> : Integration Office 365</li>
@@ -50,7 +50,7 @@
                     </ul>
                 </div>
                 <div>
-                    <h3>🛠️ Outils d'orchestration</h3>
+                    <h3>Outils d'orchestration</h3>
                     <ul>
                         <li>Terraform, CloudFormation</li>
                         <li>Kubernetes, Helm</li>
@@ -72,28 +72,28 @@
                 <tr>
                     <td>AWS</td>
                     <td>Solutions Architect Associate/Professional</td>
-                    <td>⭐⭐⭐</td>
+                    <td>Élevé</td>
                 </tr>
                 <tr>
                     <td>Microsoft</td>
                     <td>Azure Solutions Architect Expert</td>
-                    <td>⭐⭐⭐</td>
+                    <td>Élevé</td>
                 </tr>
                 <tr>
                     <td>Google</td>
                     <td>Professional Cloud Architect</td>
-                    <td>⭐⭐</td>
+                    <td>Moyen</td>
                 </tr>
                 <tr>
                     <td>CNCF</td>
                     <td>CKA (Certified Kubernetes Admin)</td>
-                    <td>⭐⭐</td>
+                    <td>Moyen</td>
                 </tr>
             </table>
         </section>
 
         <section>
-            <h2>💰 Salaires très attractifs</h2>
+            <h2>Salaires très attractifs</h2>
             <table>
                 <tr>
                     <th>Niveau</th>
@@ -119,7 +119,7 @@
         </section>
 
         <section>
-            <h2>🎓 Parcours depuis le BTS SIO</h2>
+            <h2>Parcours depuis le BTS SIO</h2>
             <p>
                 <strong>Option SISR fortement recommandée</strong> :
             </p>
@@ -132,7 +132,7 @@
             </ol>
             
             <p>
-                <strong>💡 Conseil</strong> : Commencer par de petits projets personnels sur AWS/Azure 
+                <strong>Conseil</strong> : Commencer par de petits projets personnels sur AWS/Azure 
                 (crédit gratuit 1 an) pour pratiquer !
             </p>
         </section>
