--- a/cybersecurite.html
+++ b/cybersecurite.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <main>
-        <h1>🛡️ Spécialiste en Cybersécurité</h1>
+        <h1>Spécialiste en Cybersécurité</h1>
         <h2>Métier d'avenir prioritaire 2026-2030</h2>
         
         <section>
@@ -18,7 +18,7 @@
                 les entreprises investissent massivement dans la sécurité informatique. Ce secteur recrute plus vite qu'il ne forme !
             </p>
             <p>
-                <em>📈 +25% d'offres d'emploi prévues entre 2025 et 2030</em>
+                <em>+25% d'offres d'emploi prévues entre 2025 et 2030</em>
             </p>
         </section>
 
@@ -37,7 +37,7 @@
             <h2>Compétences techniques requises</h2>
             <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px;">
                 <div>
-                    <h3>🔧 Outils essentiels</h3>
+                    <h3>Outils essentiels</h3>
                     <ul>
                         <li>Kali Linux, Metasploit</li>
                         <li>Wireshark, Nmap</li>
@@ -46,7 +46,7 @@
                     </ul>
                 </div>
                 <div>
-                    <h3>🎓 Certifications valorisées</h3>
+                    <h3>Certifications valorisées</h3>
                     <ul>
                         <li>CISSP, CEH</li>
                         <li>CompTIA Security+</li>
@@ -58,7 +58,7 @@
         </section>
 
         <section>
-            <h2>💰 Perspectives salariales</h2>
+            <h2>Perspectives salariales</h2>
             <table>
                 <tr>
                     <th>Niveau</th>
@@ -84,7 +84,7 @@
         </section>
 
         <section>
-            <h2>🎯 Lien avec le BTS SIO</h2>
+            <h2>Lien avec le BTS SIO</h2>
             <p>
                 <strong>Option SISR recommandée</strong> : Parfaite pour acquérir les bases en réseaux et systèmes.
                 Complément idéal : stage en entreprise spécialisée + certifications personnelles.
