Ajout d'une introduction sur les métiers d'avenir du BTS SIO dans contenu.html

--- a/contenu.html
+++ b/contenu.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+     <main>
+        <h1>Métiers d'Avenir du BTS SIO</h1>
+        <h2>Horizons 2026-2030</h2>
+        <p>
+            Découvrez les <strong>métiers d'avenir</strong> du secteur informatique liés au BTS Services Informatiques aux Organisations. 
+            Entre innovation technologique et transformation numérique, explorez les opportunités professionnelles qui façonneront 
+            le monde du travail de demain dans les domaines des infrastructures IT et du développement logiciel.
+        </p>
+        <p>
+            <em>Préparez-vous aux défis technologiques de demain !</em>
+        </p>
+    </main>
     <main>
         <h1>🖥️ Métiers d'Avenir SISR</h1>
         <h2>Solutions d'Infrastructure, Systèmes et Réseaux</h2>
