Ajustement des hauteurs des iframes dans index.html pour une meilleure adaptabilité de la mise en page.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <iframe src="sommaire.html" name="f1" height="800" width="30%"></iframe>
-    <iframe src="contenu.html" name="f2" height="800" width="60%"></iframe>
+    <iframe src="sommaire.html" name="f1" height="100%" width="30%"></iframe>
+    <iframe src="contenu.html" name="f2" height="100%" width="60%"></iframe>
 </body>
 </html>
