Ajout de liens vers des pages spécifiques pour les métiers en cybersécurité, architecte cloud, DevOps et administrateur de données dans contenu.html. Suppression des hauteurs des iframes dans index.html pour une meilleure adaptabilité.

--- a/contenu.html
+++ b/contenu.html
@@ -24,7 +24,7 @@
         <h2>Solutions d'Infrastructure, Systèmes et Réseaux</h2>
         
         <section>
-            <h2>🛡️ Spécialiste en Cybersécurité</h2>
+            <h2><a href="cybersecurite.html" target="f2">🛡️ Spécialiste en Cybersécurité</a></h2>
             <p>
                 <strong>Évolution majeure 2026-2030 :</strong> Avec l'explosion des cyberattaques et la généralisation du télétravail, 
                 ce métier devient critique. Les spécialistes protègent les infrastructures contre les menaces numériques.
@@ -39,7 +39,7 @@
         </section>
 
         <section>
-            <h2>☁️ Architecte Cloud Infrastructure</h2>
+            <h2><a href="cloud.html" target="f2">☁️ Architecte Cloud Infrastructure</a></h2>
             <p>
                 <strong>Métier en pleine expansion :</strong> La migration vers le cloud s'accélère. Les entreprises recherchent 
                 des experts capables de concevoir et gérer des infrastructures cloud hybrides et multi-cloud.
@@ -54,7 +54,7 @@
         </section>
 
         <section>
-            <h2>🤖 DevOps Engineer</h2>
+            <h2><a href="devops.html" target="f2">🤖 DevOps Engineer</a></h2>
             <p>
                 <strong>Profil très recherché :</strong> L'automatisation devient incontournable. Les DevOps facilitent 
                 la collaboration entre développement et production pour des déploiements plus rapides et fiables.
@@ -69,7 +69,7 @@
         </section>
 
         <section>
-            <h2>📊 Administrateur de Données</h2>
+            <h2><a href="datascience.html" target="f2">📊 Administrateur de Données</a></h2>
             <p>
                 <strong>Enjeu majeur :</strong> Avec le RGPD et l'explosion des données, les entreprises ont besoin 
                 d'experts pour gérer, sécuriser et optimiser leurs bases de données.
