Ajout des hauteurs aux iframes dans index.html pour garantir une meilleure visibilité du contenu.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <iframe src="sommaire.html" name="f1" width="30%"></iframe>
-    <iframe src="contenu.html" name="f2" width="60%"></iframe>
+    <iframe src="sommaire.html" height="1000" name="f1" width="30%"></iframe>
+    <iframe src="contenu.html" height="1000" name="f2" width="60%"></iframe>
 </body>
 </html>
