Suppression des emojis dans les titres des sections pour une présentation plus sobre dans contenu.html et devweb.html.

--- a/devweb.html
+++ b/devweb.html
@@ -96,7 +96,7 @@
         </section>
 
         <section>
-            <h2>💰 Rémunération selon l'expérience</h2>
+            <h2>Rémunération selon l'expérience</h2>
             <table>
                 <tr>
                     <th>Niveau</th>
@@ -127,7 +127,7 @@
         </section>
 
         <section>
-            <h2>🎓 Parcours idéal depuis BTS SIO</h2>
+            <h2Parcours idéal depuis BTS SIO</h2>
             <p>
                 <strong>Option SLAM parfaitement adaptée</strong> :
             </p>
@@ -142,10 +142,10 @@
         </section>
 
         <section>
-            <h2>🌍 Secteurs d'application</h2>
+            <h2>Secteurs d'application</h2>
             <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px;">
                 <div>
-                    <h3>🏢 Entreprise</h3>
+                    <h3>Entreprise</h3>
                     <ul>
                         <li>ESN (Capgemini, Sopra...)</li>
                         <li>Startups tech</li>
@@ -154,7 +154,7 @@
                     </ul>
                 </div>
                 <div>
-                    <h3>🚀 Modalités</h3>
+                    <h3>Modalités</h3>
                     <ul>
                         <li>CDI en entreprise</li>
                         <li>Freelance/Consultant</li>
@@ -166,14 +166,14 @@
         </section>
 
         <section>
-            <h2>💡 Avantages de ce métier</h2>
+            <h2>Avantages de ce métier</h2>
             <ul>
-                <li>✅ <strong>Polyvalence</strong> : Comprendre toute l'application</li>
-                <li>✅ <strong>Créativité</strong> : Voir ses idées prendre vie</li>
-                <li>✅ <strong>Évolution rapide</strong> : Nouvelles technos constamment</li>
-                <li>✅ <strong>Télétravail</strong> : Flexibilité géographique</li>
-                <li>✅ <strong>Entreprenariat</strong> : Créer sa propre startup</li>
-                <li>✅ <strong>Communauté</strong> : Écosystème dev très actif</li>
+                <li><strong>Polyvalence</strong> : Comprendre toute l'application</li>
+                <li><strong>Créativité</strong> : Voir ses idées prendre vie</li>
+                <li><strong>Évolution rapide</strong> : Nouvelles technos constamment</li>
+                <li><strong>Télétravail</strong> : Flexibilité géographique</li>
+                <li><strong>Entreprenariat</strong> : Créer sa propre startup</li>
+                <li><strong>Communauté</strong> : Écosystème dev très actif</li>
             </ul>
         </section>
     </main>
