--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <iframe src="sommaire.html" height="1000" name="f1" width="20%"></iframe>
-    <iframe src="contenu.html" height="1000" name="f2" width="70%"></iframe>
+    <div style="display: flex; flex-direction: row; width: 100vw; min-height: 100vh;">
+        <iframe src="sommaire.html" name="f1" style="width: 22vw; min-width: 200px; height: 100vh; border: none;"></iframe>
+        <iframe src="contenu.html" name="f2" style="width: 78vw; min-width: 300px; height: 100vh; border: none;"></iframe>
+    </div>
 </body>
 </html>
