Ajout de sections multimédias dans les pages : intégration d'images et de vidéos pour enrichir le contenu des métiers.

--- a/cybersecurite.html
+++ b/cybersecurite.html
@@ -10,6 +10,16 @@
     <main>
         <h1>Spécialiste en Cybersécurité</h1>
         <h2>Métier d'avenir prioritaire 2026-2030</h2>
+        <table style="width:100%;margin:2em 0;">
+            <tr>
+                <td style="width:45%;text-align:center;vertical-align:top;">
+                    <img src="https://images.unsplash.com/photo-1510511459019-5dda7724fd87?auto=format&fit=crop&w=500&q=80" alt="Cybersécurité" style="max-width:100%;border-radius:8px;box-shadow:0 2px 8px #cfd8dc;">
+                </td>
+                <td style="width:55%;text-align:center;vertical-align:top;">
+                    <iframe width="100%" height="250" src="https://www.youtube.com/embed/2eR3yQbQXnA" title="Présentation métier Cybersécurité" frameborder="0" allowfullscreen></iframe>
+                </td>
+            </tr>
+        </table>
         
         <section>
             <h2>Pourquoi ce métier explose-t-il ?</h2>
