--- a/cloud.html
+++ b/cloud.html
@@ -10,6 +10,16 @@
     <main>
         <h1>Architecte Cloud</h1>
         <h2>Concevoir l'infrastructure de demain</h2>
+        <table style="width:100%;margin:2em 0;">
+            <tr>
+                <td style="width:45%;text-align:center;vertical-align:top;">
+                    <img src="https://images.unsplash.com/photo-1465101046530-73398c7f28ca?auto=format&fit=crop&w=500&q=80" alt="Cloud" style="max-width:100%;border-radius:8px;box-shadow:0 2px 8px #cfd8dc;">
+                </td>
+                <td style="width:55%;text-align:center;vertical-align:top;">
+                    <iframe width="100%" height="250" src="https://www.youtube.com/embed/2LaAJq1lB1Q" title="Présentation métier Cloud" frameborder="0" allowfullscreen></iframe>
+                </td>
+            </tr>
+        </table>
         
         <section>
             <h2>La révolution Cloud en cours</h2>
