--- a/datascience.html
+++ b/datascience.html
@@ -10,6 +10,16 @@
     <main>
         <h1>Data Scientist</h1>
         <h2>Transformer les données en décisions stratégiques</h2>
+        <table style="width:100%;margin:2em 0;">
+            <tr>
+                <td style="width:45%;text-align:center;vertical-align:top;">
+                    <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?auto=format&fit=crop&w=500&q=80" alt="Data Scientist" style="max-width:100%;border-radius:8px;box-shadow:0 2px 8px #cfd8dc;">
+                </td>
+                <td style="width:55%;text-align:center;vertical-align:top;">
+                    <iframe width="100%" height="250" src="https://www.youtube.com/embed/1g6LZ5iKp2A" title="Présentation métier Data Scientist" frameborder="0" allowfullscreen></iframe>
+                </td>
+            </tr>
+        </table>
         
         <section>
             <h2>L'explosion de la donnée</h2>
