--- a/devops.html
+++ b/devops.html
@@ -10,6 +10,16 @@
     <main>
         <h1>DevOps Engineer</h1>
         <h2>Le pont entre développement et production</h2>
+        <table style="width:100%;margin:2em 0;">
+            <tr>
+                <td style="width:45%;text-align:center;vertical-align:top;">
+                    <img src="https://images.unsplash.com/photo-1461749280684-dccba630e2f6?auto=format&fit=crop&w=500&q=80" alt="DevOps" style="max-width:100%;border-radius:8px;box-shadow:0 2px 8px #cfd8dc;">
+                </td>
+                <td style="width:55%;text-align:center;vertical-align:top;">
+                    <iframe width="100%" height="250" src="https://www.youtube.com/embed/0yWAtQ6wYNM" title="Présentation métier DevOps" frameborder="0" allowfullscreen></iframe>
+                </td>
+            </tr>
+        </table>
         
         <section>
             <h2>Pourquoi DevOps est incontournable ?</h2>
