--- a/devops.html
+++ b/devops.html
@@ -16,7 +16,7 @@
                     <img src="https://images.unsplash.com/photo-1461749280684-dccba630e2f6?auto=format&fit=crop&w=500&q=80" alt="DevOps" style="max-width:100%;border-radius:8px;box-shadow:0 2px 8px #cfd8dc;">
                 </td>
                 <td style="width:55%;text-align:center;vertical-align:top;">
-                    <iframe width="100%" height="250" src="https://www.youtube.com/embed/0yWAtQ6wYNM" title="Présentation métier DevOps" frameborder="0" allowfullscreen></iframe>
+                    <iframe width="100%" height="250" src="https://youtu.be/VihAg179M3I?si=eoMzq98ff2UdBOP5" title="Présentation métier DevOps" frameborder="0" allowfullscreen></iframe>
                 </td>
             </tr>
         </table>
