--- a/devweb.html
+++ b/devweb.html
@@ -16,7 +16,7 @@
                     <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?auto=format&fit=crop&w=500&q=80" alt="Développeur Full-Stack" style="max-width:100%;border-radius:8px;box-shadow:0 2px 8px #cfd8dc;">
                 </td>
                 <td style="width:55%;text-align:center;vertical-align:top;">
-                    <iframe width="100%" height="250" src="https://www.youtube.com/embed/8cmx7V4oIr8" title="Présentation métier Développeur Full-Stack" frameborder="0" allowfullscreen></iframe>
+                    <iframe width="100%" height="250" src="https://youtu.be/UnW3YPkSWFE?si=ziQzUGnPYowT2xFG" title="Présentation métier Développeur Full-Stack" frameborder="0" allowfullscreen></iframe>
                 </td>
             </tr>
         </table>
