Réorganisation de la structure HTML : suppression de sections inutiles et ajustement des iframes pour une meilleure présentation.

--- a/index.html
+++ b/index.html
@@ -7,21 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-     <main>
-        <h1>Métiers d'Avenir du BTS SIO</h1>
-        <h2>Horizons 2026-2030</h2>
-        <p>
-            Découvrez les <strong>métiers d'avenir</strong> du secteur informatique liés au BTS Services Informatiques aux Organisations. 
-            Entre innovation technologique et transformation numérique, explorez les opportunités professionnelles qui façonneront 
-            le monde du travail de demain dans les domaines des infrastructures IT et du développement logiciel.
-        </p>
-        <p>
-            <em>Préparez-vous aux défis technologiques de demain !</em>
-        </p>
-    </main>
-    <div style="display: flex; flex-direction: row; width: 100vw; min-height: 100vh;">
-        <iframe src="sommaire.html" width="20%" height="800"></iframe>
-        <iframe src="contenu.html" width="70%" height="800"></iframe>
+    <div style="display: flex; width: 100vw; height: 100vh;">
+        <iframe src="sommaire.html" name="f1" style="width: 250px; min-width: 180px; height: 100vh; border: none;"></iframe>
+        <iframe src="contenu.html" name="f2" style="flex: 1; height: 100vh; border: none;"></iframe>
     </div>
 </body>
 </html>
