--- a/datascience.html
+++ b/datascience.html
@@ -16,8 +16,7 @@
                     <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?auto=format&fit=crop&w=500&q=80" alt="Data Scientist" style="max-width:100%;border-radius:8px;box-shadow:0 2px 8px #cfd8dc;">
                 </td>
                 <td style="width:55%;text-align:center;vertical-align:top;">
-                    <iframe width="100%" height="250" src="https://youtu.be/ixVR8uPetHQ?si=dxaarCmNi5IA4C2v" title="Présentation métier Data Scientist" frameborder="0" allowfullscreen></iframe>
-                </td>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/qQPIB2DxJEE?si=gE1T4WpFuRsN0Zl8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>                </td>
             </tr>
         </table>
         
