Ajout des fichiers CV, lettre de motivation, et documents HTML pour la Mission 2, mise à jour des liens et correction de l'URL du site du lycée.

--- a/Mission2/site-externe.html
+++ b/Mission2/site-externe.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <!-- Nom et Prénom : [Votre Nom] [Votre Prénom] -->
     <meta charset="UTF-8">
     <title>Site Externe</title>
     <link rel="stylesheet" href="style.css">
@@ -13,7 +12,7 @@
         <h2>Lycée Parc de Vilgénis</h2>
         <p>Site officiel de l'établissement avec toutes les informations pratiques.</p>
         
-        <a href="https://www.lyc-vilgenis-massy.ac-versailles.fr" target="_blank" class="link-button">
+        <a href="https://www.lyceevilgenis.fr/" target="_blank" class="link-button">
             🔗 Visiter le Site du Lycée
         </a>
         
