Mise à jour des liens vers le portfolio dans navigation.html

--- a/Mission2/navigation.html
+++ b/Mission2/navigation.html
@@ -12,8 +12,9 @@
         <li><a href="video.html" target="contenu">🎥 Vidéo BTS SIO</a></li>
         <li><a href="site-externe.html" target="contenu">🌐 Site Lycée</a></li>
         <li><a href="tableau-formulaire.html" target="contenu">📝 Inscription</a></li>
-        <li><a href="presentation.html" target="contenu">👤 Présentation</a></li>
-        <li><a href="documents.html" target="contenu">📄 Documents</a></li>
+        <-- portfolio -->
+        <li><a href="Portfolio/presentation.html" target="contenu">👤 Présentation</a></li>
+        <li><a href="Portfolio/documents.html" target="contenu">📄 Documents</a></li>
     </ul>
 </body>
 </html>
