Ajout d'une description pour la section de présentation personnelle dans navigation.html

--- a/Mission2/navigation.html
+++ b/Mission2/navigation.html
@@ -12,7 +12,7 @@
         <li><a href="video.html" target="contenu">🎥 Vidéo BTS SIO</a></li>
         <li><a href="site-externe.html" target="contenu">🌐 Site Lycée</a></li>
         <li><a href="tableau-formulaire.html" target="contenu">📝 Inscription</a></li>
-        <-- portfolio -->
+        <p>Ma Presentation personnelle :</p>
         <li><a href="Portfolio/presentation.html" target="contenu">👤 Présentation</a></li>
         <li><a href="Portfolio/documents.html" target="contenu">📄 Documents</a></li>
     </ul>
