Correction des chemins des fichiers CSS et amélioration de la mise en page des tableaux dans plusieurs fichiers HTML

--- a/Mission2/maps.html
+++ b/Mission2/maps.html
@@ -17,8 +17,8 @@
         <h3>Informations pratiques :</h3>
         <ul>
             <li><strong>Adresse :</strong> 80 Rue De Versailles, 91300 Massy</li>
-            <li><strong>Téléphone :</strong> 01 69 53 74 00/li>
-            <li><strong>Se situe a 10 minutes a pieds de la gare Massy - Paleseau</strong></li>
+            <li><strong>Téléphone :</strong> 01 69 53 74 00</li>
+            <li>Se situe a <strong>10 minutes</strong> a pieds de la gare Massy - Paleseau</li>
         </ul>
     </div>
 </body>
