--- a/Mission2/tableau-formulaire.html
+++ b/Mission2/tableau-formulaire.html
@@ -10,29 +10,29 @@
         <h1>📝 Informations et Inscription</h1>
         
         <h2>📊 Tableau des Options BTS SIO</h2>
-        <table>
-            <tr>
-                <th>Aspects</th>
-                <th>Option SISR</th>
-                <th>Option SLAM</th>
+        <table style="width:100%; border: 2px solid #3a6ed8; border-collapse: collapse;"></table>
+            <tr style="background-color: #3a6ed8; color: #fff;">
+            <th colspan="3" style="padding: 10px; border: 1px solid #3a6ed8; text-align: center;">
+                Période de stage : Du 27 Mai au 5 Juillet 2023
+            </th>
             </tr>
             <tr>
-                <td>Intitulé</td>
-                <td>Solutions d'Infrastructure</td>
-                <td>Solutions Logicielles</td>
-            </tr>
-            <tr>
-                <td>Domaines</td>
-                <td>Réseaux, cybersécurité</td>
-                <td>Développement, programmation</td>
-            </tr>
-            <tr>
-                <td>Débouchés</td>
-                <td>Administrateur réseau</td>
-                <td>Développeur applications</td>
+            <td style="width: 200px; border: 1px solid #3a6ed8; text-align: center;"></td>
+                <img src="https://www.lyc-vilgenis-massy.ac-versailles.fr/IMG/png/logo_vilgenis.png" alt="Logo Parc de Vilgénis" style="width: 100%; max-width: 180px;"><br>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6e/Logo_BTS.svg/512px-Logo_BTS.svg.png" alt="Logo BTS" style="width: 100%; max-width: 180px;">
+            </td>
+            <td style="border: 1px solid #3a6ed8; padding: 8px;">
+                Contacter une entreprise<br>
+                Remplir la feuille d'engagement (à télécharger de l'ENT)<br>
+                Signature du responsable Entreprise<br>
+                Signature du tuteur (Votre prof)<br>
+                Délivrance convention de stage
+            </td>
+            <td style="border: 1px solid #3a6ed8; padding: 8px;">
+                <!-- Colonne vide pour respecter la mise en page de l'image -->
+            </td>
             </tr>
         </table>
-        
         <h2>📋 Formulaire d'Inscription</h2>
         <form id="inscriptionForm">
             <label for="nom">Nom :</label>
