--- a/Mission2/Portfolio/presentation.html
+++ b/Mission2/Portfolio/presentation.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Présentation</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <div class="content">
