Mise à jour des logos dans le tableau d'inscription

--- a/Mission2/tableau-formulaire.html
+++ b/Mission2/tableau-formulaire.html
@@ -18,8 +18,8 @@
             </tr>
             <tr>
             <td style="width: 200px; border: 1px solid #3a6ed8; text-align: center;"></td>
-                <img src="https://www.lyc-vilgenis-massy.ac-versailles.fr/IMG/png/logo_vilgenis.png" alt="Logo Parc de Vilgénis" style="width: 100%; max-width: 180px;"><br>
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6e/Logo_BTS.svg/512px-Logo_BTS.svg.png" alt="Logo BTS" style="width: 100%; max-width: 180px;">
+                <img src="https://clg-bert-savigny.ac-versailles.fr/local/cache-vignettes/L200xH125/vilgenis-9df83.png?1736964890" alt="Logo Parc de Vilgénis" style="width: 100%; max-width: 180px;"><br>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTjfT9baYE0fQyyTIoEAWS_2NWixPhjWQDT7g&s" alt="Logo BTS" style="width: 100%; max-width: 180px;">
             </td>
             <td style="border: 1px solid #3a6ed8; padding: 8px;">
                 Contacter une entreprise<br>
