--- a/Mission2/tableau-formulaire.html
+++ b/Mission2/tableau-formulaire.html
@@ -10,27 +10,22 @@
         <h1>📝 Informations et Inscription</h1>
         
         <h2>📊 Tableau des Options BTS SIO</h2>
-        <table style="width:100%; border: 2px solid #3a6ed8; border-collapse: collapse;"></table>
-            <tr style="background-color: #3a6ed8; color: #fff;">
-            <th colspan="3" style="padding: 10px; border: 1px solid #3a6ed8; text-align: center;">
-                Période de stage : Du 27 Mai au 5 Juillet 2023
-            </th>
+        <table class="stage-table">
+            <tr class="stage-header">
+                <th colspan="2">Période de stage : Du 27 Mai au 5 Juillet 2023</th>
             </tr>
             <tr>
-            <td style="width: 200px; border: 1px solid #3a6ed8; text-align: center;"></td>
-                <img src="https://clg-bert-savigny.ac-versailles.fr/local/cache-vignettes/L200xH125/vilgenis-9df83.png?1736964890" alt="Logo Parc de Vilgénis" style="width: 100%; max-width: 180px;"><br>
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTjfT9baYE0fQyyTIoEAWS_2NWixPhjWQDT7g&s" alt="Logo BTS" style="width: 100%; max-width: 180px;">
-            </td>
-            <td style="border: 1px solid #3a6ed8; padding: 8px;">
-                Contacter une entreprise<br>
-                Remplir la feuille d'engagement (à télécharger de l'ENT)<br>
-                Signature du responsable Entreprise<br>
-                Signature du tuteur (Votre prof)<br>
-                Délivrance convention de stage
-            </td>
-            <td style="border: 1px solid #3a6ed8; padding: 8px;">
-                <!-- Colonne vide pour respecter la mise en page de l'image -->
-            </td>
+                <td class="logos-cell">
+                    <img src="https://clg-bert-savigny.ac-versailles.fr/local/cache-vignettes/L200xH125/vilgenis-9df83.png?1736964890" alt="Logo Parc de Vilgénis" class="logo-img"><br>
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTjfT9baYE0fQyyTIoEAWS_2NWixPhjWQDT7g&s" alt="Logo BTS" class="logo-img">
+                </td>
+                <td class="etapes-cell">
+                    Contacter une entreprise<br>
+                    Remplir la feuille d'engagement (à télécharger de l'ENT)<br>
+                    Signature du responsable Entreprise<br>
+                    Signature du tuteur (Votre prof)<br>
+                    Délivrance convention de stage
+                </td>
             </tr>
         </table>
         <h2>📋 Formulaire d'Inscription</h2>
