Ajout d'un espace et suppression d'une ligne vide dans le tableau des options BTS SIO

--- a/Mission2/tableau-formulaire.html
+++ b/Mission2/tableau-formulaire.html
@@ -10,6 +10,7 @@
         <h1>📝 Informations et Inscription</h1>
         
         <h2>📊 Tableau des Options BTS SIO</h2>
+
         <table class="stage-table">
             <tr class="stage-header">
                 <th colspan="2">Période de stage : Du 27 Mai au 5 Juillet 2023</th>
@@ -21,13 +22,17 @@
                 </td>
                 <td class="etapes-cell">
                     Contacter une entreprise<br>
-                    Remplir la feuille d'engagement (à télécharger de l'ENT)<br>
+                    Remplir la feuille d'engagement (à télécharger de l'ENT)
+                </td>
+                <td>
                     Signature du responsable Entreprise<br>
                     Signature du tuteur (Votre prof)<br>
                     Délivrance convention de stage
                 </td>
+       
             </tr>
         </table>
+
         <h2>📋 Formulaire d'Inscription</h2>
         <form id="inscriptionForm">
             <label for="nom">Nom :</label>
