Réorganisation des logos dans le tableau des options BTS SIO

--- a/Mission2/tableau-formulaire.html
+++ b/Mission2/tableau-formulaire.html
@@ -18,18 +18,21 @@
             <tr>
                 <td class="logos-cell">
                     <img src="https://clg-bert-savigny.ac-versailles.fr/local/cache-vignettes/L200xH125/vilgenis-9df83.png?1736964890" alt="Logo Parc de Vilgénis" class="logo-img"><br>
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTjfT9baYE0fQyyTIoEAWS_2NWixPhjWQDT7g&s" alt="Logo BTS" class="logo-img">
                 </td>
-                <td class="etapes-cell">
+                 <td class="etapes-cell">
                     Contacter une entreprise<br>
                     Remplir la feuille d'engagement (à télécharger de l'ENT)
+                </td>
+            </tr>
+            <tr>
+                <td class="logos-cell">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTjfT9baYE0fQyyTIoEAWS_2NWixPhjWQDT7g&s" alt="Logo BTS" class="logo-img">
                 </td>
                 <td>
                     Signature du responsable Entreprise<br>
                     Signature du tuteur (Votre prof)<br>
                     Délivrance convention de stage
                 </td>
-       
             </tr>
         </table>
 
