Correction du lien de téléchargement de la lettre de motivation dans le document HTML

--- a/Mission2/Portfolio/documents.html
+++ b/Mission2/Portfolio/documents.html
@@ -18,7 +18,7 @@
         
         <h3>✉️ Lettre de Motivation</h3>
         <p>Ma motivation pour le BTS SIO</p>
-        <a href="LDM-Generale.pdf" target="_blank" class="link-button">📥 Télécharger ma lettre de motivation</a>
+        <a href="LDM_Generale.pdf" target="_blank" class="link-button">📥 Télécharger ma lettre de motivation</a>
     </div>
 </body>
 </html>
