--- a/Mission2/tableau-formulaire.html
+++ b/Mission2/tableau-formulaire.html
@@ -10,31 +10,42 @@
         <h1>📝 Informations et Inscription</h1>
         
         <h2>📊 Tableau des Options BTS SIO</h2>
-        
-        <table class="stage-table">
-            <tr class="stage-header">
-                <th colspan="2">Période de stage : Du 27 Mai au 5 Juillet 2023</th>
-            </tr>
-            <tr>
-                <td class="logos-cell">
-                    <img src="https://clg-bert-savigny.ac-versailles.fr/local/cache-vignettes/L200xH125/vilgenis-9df83.png?1736964890" alt="Logo Parc de Vilgénis" class="logo-img"><br>
-                </td>
-                 <td class="etapes-cell">
-                    Contacter une entreprise<br>
-                    Remplir la feuille d'engagement (à télécharger de l'ENT)
-                </td>
-            </tr>
-            <tr>
-                <td class="logos-cell">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTjfT9baYE0fQyyTIoEAWS_2NWixPhjWQDT7g&s" alt="Logo BTS" class="logo-img">
-                </td>
-                <td>
-                    Signature du responsable Entreprise<br>
-                    Signature du tuteur (Votre prof)<br>
-                    Délivrance convention de stage
-                </td>
-            </tr>
-        </table>
+
+        <div style="max-height: 360px; overflow-y: auto;">
+            <table class="stage-table" style="border-collapse: collapse; width: 100%;">
+                <thead>
+                    <tr class="stage-header"></tr>
+                        <th colspan="2" style="position: sticky; top: 0; z-index: 2; background: #4a73db; color: #fff; padding: 10px;">
+                            Période de stage : Du 27 Mai au 5 Juillet 2023
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="logos-cell" rowspan="2" style="width: 160px; text-align: center; vertical-align: top;"></td>
+                            <img src="https://clg-bert-savigny.ac-versailles.fr/local/cache-vignettes/L200xH125/vilgenis-9df83.png?1736964890" alt="Logo Parc de Vilgénis" class="logo-img" style="max-width: 100%; height: auto;">
+                        </td>
+                        <td class="etapes-cell">Contacter une entreprise</td>
+                    </tr>
+                    <tr>
+                        <td class="etapes-cell">Remplir la feuille d'engagement (à télécharger de l'ENT)</td>
+                    </tr>
+
+                    <tr>
+                        <td class="logos-cell" rowspan="3" style="width: 160px; text-align: center; vertical-align: top;"></td>
+                            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTjfT9baYE0fQyyTIoEAWS_2NWixPhjWQDT7g&s" alt="Logo BTS" class="logo-img" style="max-width: 100%; height: auto;">
+                        </td>
+                        <td class="etapes-cell">Signature du responsable Entreprise</td>
+                    </tr>
+                    <tr>
+                        <td class="etapes-cell">Signature du tuteur (Votre prof)</td>
+                    </tr>
+                    <tr>
+                        <td class="etapes-cell">Délivrance convention de stage</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
 
         <h2>📋 Formulaire d'Inscription</h2>
         <form id="inscriptionForm">
