--- a/Mission2/tableau-formulaire.html
+++ b/Mission2/tableau-formulaire.html
@@ -12,28 +12,32 @@
         <h2>📊 Tableau des Options BTS SIO</h2>
 
         <table class="stage-table">
-            <tr class="stage-header">
-                <th colspan="2">Période de stage : Du 27 Mai au 5 Juillet 2023</th>
-            </tr>
-            <tr>
-                <td class="logos-cell">
-                    <img src="https://clg-bert-savigny.ac-versailles.fr/local/cache-vignettes/L200xH125/vilgenis-9df83.png?1736964890" alt="Logo Parc de Vilgénis" class="logo-img"><br>
-                </td>
-                 <td class="etapes-cell">
-                    Contacter une entreprise<br>
-                    Remplir la feuille d'engagement (à télécharger de l'ENT)
-                </td>
-            </tr>
-            <tr>
-                <td class="logos-cell">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTjfT9baYE0fQyyTIoEAWS_2NWixPhjWQDT7g&s" alt="Logo BTS" class="logo-img">
-                </td>
-                <td>
-                    Signature du responsable Entreprise<br>
-                    Signature du tuteur (Votre prof)<br>
-                    Délivrance convention de stage
-                </td>
-            </tr>
+            <thead>
+                <tr>
+                    <th colspan="2">Période de stage : Du 27 Mai au 5 Juillet 2023</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td class="logos-cell" rowspan="5">
+                        <img src="https://clg-bert-savigny.ac-versailles.fr/local/cache-vignettes/L200xH125/vilgenis-9df83.png?1736964890" alt="Logo Parc de Vilgénis">
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTjfT9baYE0fQyyTIoEAWS_2NWixPhjWQDT7g&s" alt="Logo BTS">
+                    </td>
+                    <td>Contacter une entreprise</td>
+                </tr>
+                <tr>
+                    <td>Remplir la feuille d'engagement (à télécharger de l'ENT)</td>
+                </tr>
+                <tr>
+                    <td>Signature du responsable Entreprise</td>
+                </tr>
+                <tr>
+                    <td>Signature du tuteur (Votre prof)</td>
+                </tr>
+                <tr>
+                    <td>Délivrance convention de stage</td>
+                </tr>
+            </tbody>
         </table>
 
         <h2>📋 Formulaire d'Inscription</h2>
