--- a/index.html
+++ b/index.html
@@ -1,18 +1,59 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="TP3/style.css">
+    <title>Hub BTS SIO – TPs & Missions</title>
+    <link rel="stylesheet" href="hub.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+    <meta name="description" content="Hub de navigation vers les TP et Missions du BTS SIO.">
+    <meta name="color-scheme" content="light dark">
+    <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' rx='16' fill='%233498db'/%3E%3Ctext x='50' y='60' text-anchor='middle' font-size='54' fill='white' font-family='Arial'%3ES%3C/text%3E%3C/svg%3E">
+
 </head>
 <body>
-    <p>Liens des TD realisées en Developpement lors de ma premiere année de BTS SIO <br>
-    <a href="TP1/index.html" target="f2">TP1</a><br>
-    <a href="TP2/index.html" target="f2">TP2(vide)</a><br>
-    <a href="TP3/index.html" target="f2">TP3</a><br>
-    <a href="Mission2/index.html" target="f2">Mission 2</a>
-</p>
-</body>
+    <header class="site-header">
+        <h1>🎓 BTS SIO – Hub des TP & Missions</h1>
+        <p class="subtitle">Retrouvez ici tous les travaux réalisés en première année.</p>
+    </header>
 
+    <main class="cards-grid">
+        <a class="card" href="TP1/index.html">
+            <div class="card-icon">📘</div>
+            <h2>TP1</h2>
+            <p>Présentation du BTS SIO et spécialités.</p>
+        </a>
+
+        <div class="card card-disabled" aria-disabled="true" tabindex="-1">
+            <div class="card-icon">📕</div>
+            <h2>TP2</h2>
+            <p>À venir (vide).</p>
+        </div>
+
+        <a class="card" href="TP3/index.html">
+            <div class="card-icon">🧭</div>
+            <h2>TP3</h2>
+            <p>Métiers d’avenir et navigation bi-volet.</p>
+        </a>
+
+        <a class="card" href="Mission1/index.html">
+            <div class="card-icon">📄</div>
+            <h2>Mission 1</h2>
+            <p>Documents de candidature (CV, lettre de motivation, LinkedIn).</p>
+        </a>
+
+        <a class="card" href="Mission2/index.html">
+            <div class="card-icon">🚀</div>
+            <h2>Mission 2</h2>
+            <p>Portail d’information et tableaux/formulaires.</p>
+        </a>
+    </main>
+
+    <footer class="site-footer">
+        <small>© 2025 · Waël El Harti · Parc de Vilgénis · BTS SIO</small>
+    </footer>
+</body>
+</html>
 </html>
